# django-cup

./: .coveragerc  .travis.yml  Pipfile  README.md  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
cup/: admin.py  models.py  tests.py  urls.py  views.py
cup/migrations/: 0001_initial.py  0002_protect.py
cup/templates/cup/: cup_detail.html  cup_list.html
test_cup/: settings.py  urls.py  wsgi.py
test_cup/templates/: base.html
